# the78mole-blog.github.io

./: .gitignore  .link_cache.json  .pre-commit-config.yaml  LICENSE  Makefile  README.md  app.vue  content.config.ts  nuxt.config.ts  package-lock.json  package.json  renovate.json  tailwind.config.js
.github/: copilot-instructions.md
components/: AdBlock.vue  BlogPostList.vue  ConsentBanner.vue  GiscusComments.vue  YearMonthNav.vue
discussions/: README.md  _all.json  freertos-debugging-on-stm32-cpu-usage.json  freertos-debugging-on-stm32-cpu-usage.md  get-the-hell-out-of-my-wall-box-or-how-to-make-cheap-type-2-adapter-cables-not-so-sticky.json  get-the-hell-out-of-my-wall-box-or-how-to-make-cheap-type-2-adapter-cables-not-so-sticky.md  how-to-build-a-private-storage-cluster-with-ceph.json  how-to-build-a-private-storage-cluster-with-ceph.md  integrating-wmbus-devices-into-iobroker.json  integrating-wmbus-devices-into-iobroker.md  km271-wifi-howto.json  km271-wifi-howto.md  orangepi-2g-iot-android-sdk.json  orangepi-2g-iot-android-sdk.md  reverse-engineering-the-buderus-km217.json  reverse-engineering-the-buderus-km217.md  stm32-uart-continuous-receive-with-interrupt.json  stm32-uart-continuous-receive-with-interrupt.md  stm32cubemx-and-sdram.json  stm32cubemx-and-sdram.md  taking-your-m-bus-online-with-mqtt.json  (+1 more)
layouts/: default.vue
scripts/: assign_comments.py  check-blog-images.sh  check-links.py  create_discussions.py  extract_comments.py  generate-taxonomy.py  migration.py  optimize-images.sh  patch-taxonomy.py  pyproject.toml  restore-missing-assets.py
(+112 files in other folders)
