[project]
name = "wp-migration"
version = "0.1.0"
description = "WordPress WXR to Nuxt Content migration script"
requires-python = ">=3.11"
dependencies = [
    "lxml>=5.0",
    "beautifulsoup4>=4.12",
    "markdownify>=0.13",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "requests>=2.33.1",
]

[project.scripts]
migrate             = "migration:migrate"
extract-comments    = "extract_comments:main"
assign-comments     = "assign_comments:main"
create-discussions  = "create_discussions:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
